@@ -2,3 +2,6 @@
 -XX:+UseG1GC
 -ea
 -Dsun.io.useCanonCaches=false
+-Djbr.catch.SIGABRT=true
+--add-modules=jdk.jcmd
+--add-exports=jdk.jcmd/sun.tools.jps=ALL-UNNAMED
